tests/repl/imports.check
scala> import scala.collection.mutable
import scala.collection.mutable
scala> val buf = mutable.ListBuffer[Int]()
val buf: scala.collection.mutable.ListBuffer[Int] = ListBuffer()
scala> object o { val xs = List(1, 2, 3) }
defined module o
scala> import o._
import o._
scala> buf += xs
-- [E007] Type Mismatch Error: <console>:11:7 ----------------------------------
11 |buf += xs
   |       ^^
   |       found:    scala.collection.immutable.List[Int](o.xs)
   |       required: Int
   |       
scala> buf ++= xs
val res1: scala.collection.mutable.ListBuffer[Int] = ListBuffer(1, 2, 3)
scala> import util.foo
-- Error: <console>:8:12 -------------------------------------------------------
8 |import util.foo
  |            ^^^
  |            foo is not a member of util
scala> import util.foo.bar
-- [E008] Member Not Found Error: <console>:8:12 -------------------------------
8 |import util.foo.bar
  |       ^^^^^^^^
  |       value `foo` is not a member of util - did you mean `util.Left`?
scala> :quit
